# gdpr-chatbot

./: README.md  main.py  pyproject.toml
database/: qdrant_db.py
dataset/: summary.json
dataset/raw_articles/: article_1.md  article_10.md  article_11.md  article_12.md  article_13.md  article_14.md  article_15.md  article_16.md  article_17.md  article_18.md  article_19.md  article_2.md  article_20.md  article_21.md  article_3.md  article_4.md  article_5.md  article_6.md  article_7.md  article_8.md  article_9.md
dataset/structured_output/: article_1.json  article_10.json  article_11.json  article_12.json  article_13.json  article_14.json  article_15.json  article_16.json  article_17.json  article_18.json  article_19.json  article_2.json  article_20.json  article_21.json  article_3.json  article_4.json  article_5.json  article_6.json  article_7.json  article_8.json  article_9.json
prompts/: prompts.py
schemas/: llm.py  schema.py
scripts/: embeddings_dataset.py  embeddings_pdf.py
tools/: agents.py  embedding.py  pdf_extractor.py  tools.py
