[tool.poetry]
name = "privasee"
version = "0.1.0"
description = "Privasee AI Agent to chat with GDPR Articles"
authors = ["Marco Introvigne <marcointrovigne@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
qdrant-client = "^1.12.1"
fastembed = "^0.4.2"
loguru = "^0.7.2"
openai = "^1.56.0"
langchain-community = "^0.3.9"
pypdf = "^5.1.0"
anthropic = "^0.40.0"
langgraph = "^0.2.54"
langchain-openai = "^0.2.11"
langchain-anthropic = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
